# ignifera

./: .gitignore  .project-settings.yml  README.md  ignifera.cabal
Game/Ignifera/: Color.hs
src/: Color.hs  Color.idr  Piece.hs  Piece.idr  PieceType.hs  test.hs
src/Ignifera/: Color.hs  Draw.hs  GameResult.hs  Piece.hs  PieceType.hs  Rules.hs  Side.hs  Square.hs  Util.hs
src/Ignifera/Format/: Pgn.hs  PgnParser.hs
src/Ignifera/Proto/: UciCommand.hs
src/Ignifera/Util/: GameResult.hs  PgnParser.hs  Piece.hs  PieceAbbr.hs  test.hs
src/Proto/: UciParser.hs
src/Util/: Piece.hs  PieceAbbr.hs  PieceUtil.hs
test/: Main.hs
