Name:               ignifera
Version:            0.0.0
Synopsis:
Description:
Homepage:           https://github.com/fthomas/ignifera
Bug-Reports:        https://github.com/fthomas/ignifera/issues
License:            GPL-3
License-File:       LICENSE
Author:             Frank S. Thomas <frank@timepit.eu>
Maintainer:         Frank S. Thomas <frank@timepit.eu>
Category:           Game
Build-Type:         Simple
Cabal-Version:      >= 1.8

Source-Repository head
  type:             git
  location:         https://github.com/fthomas/ignifera

Library
  hs-Source-dirs:   src
  exposed-modules:
                    Color
                    Piece
                    PieceType
                    Util.Piece
                    Util.PieceAbbr
  build-depends:    base

Test-Suite test-ignifera
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    base
