name:               ignifera
version:            0.0.0
synopsis:
description:
homepage:           https://github.com/fthomas/ignifera
bug-reports:        https://github.com/fthomas/ignifera/issues
license:            GPL-3
license-file:       LICENSE
author:             Frank S. Thomas <frank@timepit.eu>
maintainer:         Frank S. Thomas <frank@timepit.eu>
category:           Game
build-type:         Simple
cabal-version:      >= 1.8
extra-source-files: README.md

source-repository head
  type:             git
  location:         https://github.com/fthomas/ignifera

library
  hs-Source-dirs:   src
  ghc-options:      -Wall
  build-depends:    base
  exposed-modules:  Ignifera.Color
                    Ignifera.Piece
                    Ignifera.PieceType
                    Ignifera.Util.Piece
                    Ignifera.Util.PieceAbbr

test-suite test-ignifera
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:    base
